[package]
name = "dec-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = { version = "1.22.0", features = ["serde-arbitrary-precision"] }
rust_decimal_macros = "1.22.0"
rusty-money = "0.4.1"
separator = "0.4.1"
serde_json = { version = "1.0.79", features = ["alloc"] }

